--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.7",
+    "@next/font": "^14.2.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
