--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.7",
-    "@next/font": "^14.2.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -23,5 +22,6 @@
     "eslint": "^8",
     "eslint-config-next": "^14.2.3",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
