--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.77.2"
+    "sass": "^1.77.2",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/node": "^20",
