migrated to serwist

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sushi-crush",
-  "version": "0.8.2",
+  "version": "0.9.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ducanh2912/next-pwa": "^10.2.7",
+    "@serwist/next": "^9.0.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -22,6 +22,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "^14.2.3",
+    "serwist": "^9.0.3",
     "typescript": "^5"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
